OFFICIAL RELEASE 0.2.0! Fixed the broken add/delete link system. Updated UI so that error/success messages are clearly visible.

--- a/tabPageFiles/ClockAndLinks/css/style.css
+++ b/tabPageFiles/ClockAndLinks/css/style.css
@@ -19,7 +19,7 @@ body {
 	background: url('../img/bg.jpg') no-repeat center top fixed;
     background-size: 100% 100%;
     background-origin: content-box;
-	-webkit-background-size:1920px 1080px
+	-webkit-background-size:1920px 1080px;
 	margin:0;
 	padding:0;
 }
@@ -50,9 +50,14 @@ h2 {
 	-webkit-border-radius:5px;
 	width:50%;
 	padding:10px;
-	margin:10px auto 10px auto;
+	/* margin:10px auto 10px auto; */
 	text-align:center;
 	display:none;
+	position:absolute;
+	left:0;
+	right:0;
+	bottom: 10px;
+	margin: 0 auto;
 }
 #error {
 	border:1px #AB4F4F solid;
